In machine_learning_template.ipynb, in Modeling (Classification Task) > Hyperparameter Tuning > Random Forest Classifier, add code to fit the grid search object

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2723,6 +2723,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cae75e06-4ef6-469b-856e-e8f219f6b148",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize model\n",
+    "rf = RandomForestClassifier(random_state=42)\n",
+    "\n",
+    "# Define hyperparameter grid \n",
+    "rf_param_grid = {\n",
+    "    \"n_estimators\": [100, 200, 500],               \n",
+    "    \"max_depth\": [None, 10, 20],              \n",
+    "    \"min_samples_split\": [2, 5],\n",
+    "    \"min_samples_leaf\": [1, 2],\n",
+    "    \"max_features\": [0.33, 0.66, 1]                \n",
+    "}\n",
+    "\n",
+    "# Initialize grid search object\n",
+    "rf_grid_search = GridSearchCV(\n",
+    "    estimator=rf, \n",
+    "    param_grid=rf_param_grid, \n",
+    "    cv=5, \n",
+    "    scoring=\"accuracy\"  # use \"f1\", \"precision\", \"recall\" or \"roc_auc\" optionally\n",
+    ")\n",
+    "\n",
+    "# Fit the grid search to the training data\n",
+    "rf_grid_search.fit(X_train_transformed, y_train)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "cf8612fd-291f-4038-a180-35ed168eaca5",
    "metadata": {},
