--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2754,6 +2754,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d2528d8-f322-454c-b7dd-d100bfea0d7c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DataFrame of grid search results \n",
+    "rf_grid_search_results = pd.DataFrame({\n",
+    "    \"validation_accuracy\": rf_grid_search.cv_results_[\"mean_test_score\"],  # accuracy on validation data\n",
+    "    \"parameters\": rf_grid_search.cv_results_[\"params\"]  # parameter values\n",
+    "}) \n",
+    "\n",
+    "# Extract each parameter as a separate column\n",
+    "rf_grid_search_results[\"n_estimators\"] = rf_grid_search_results[\"parameters\"].apply(lambda x: x[\"n_estimators\"])\n",
+    "rf_grid_search_results[\"max_depth\"] = rf_grid_search_results[\"parameters\"].apply(lambda x: x[\"max_depth\"])\n",
+    "rf_grid_search_results[\"min_samples_split\"] = rf_grid_search_results[\"parameters\"].apply(lambda x: x[\"min_samples_split\"])\n",
+    "rf_grid_search_results[\"min_samples_leaf\"] = rf_grid_search_results[\"parameters\"].apply(lambda x: x[\"min_samples_leaf\"])\n",
+    "rf_grid_search_results[\"max_features\"] = rf_grid_search_results[\"parameters\"].apply(lambda x: x[\"max_features\"])\n",
+    "\n",
+    "# Delete the parameters column\n",
+    "rf_grid_search_results = rf_grid_search_results.drop(\"parameters\", axis=1)\n",
+    "\n",
+    "# Show the top 10 best performing models\n",
+    "print(rf_grid_search_results.sort_values(\"validation_accuracy\", ascending=False).head(10))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "cf8612fd-291f-4038-a180-35ed168eaca5",
    "metadata": {},
