--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2782,6 +2782,52 @@
   },
   {
    "cell_type": "markdown",
+   "id": "905d7493-acb4-4043-891b-588621ff1872",
+   "metadata": {},
+   "source": [
+    "### XGBoost Classifier  \n",
+    "Hyperparameters and Default Values:\n",
+    "- Model Complexity:  \n",
+    "    - `n_estimators=100`: Number of trees (boosting rounds).  \n",
+    "    - `max_depth=6`: Maximum depth of each tree.  \n",
+    "    - `learning_rate=0.3`: Step size shrinkage to prevent overfitting.  \n",
+    "    - `subsample=1.0`: Fraction of training samples used per tree.  \n",
+    "    - `colsample_bytree=1.0`: Fraction of features used per tree.  \n",
+    "    - `colsample_bylevel=1.0`: Fraction of features used per tree level.  \n",
+    "    - `colsample_bynode=1.0`: Fraction of features used per split node.  \n",
+    "- Regularization and Learning:  \n",
+    "    - `gamma=0`: Minimum loss reduction required to split a leaf node.  \n",
+    "    - `min_child_weight=1`: Minimum sum of instance weights (hessian) in a child.  \n",
+    "    - `scale_pos_weight=1`: Balances positive and negative class weights for imbalanced datasets.  \n",
+    "- Training Behavior:  \n",
+    "    - `objective=\"binary:logistic\"`: Objective function for binary classification; alternatives include `\"multi:softmax\"` or `\"multi:softprob\"`.  \n",
+    "    - `booster=\"gbtree\"`: Booster type; options include `\"gbtree\"` (default), `\"gblinear\"`, and `\"dart\"`.  \n",
+    "    - `tree_method=\"auto\"`: Tree construction algorithm; options: `\"exact\"`, `\"approx\"`, `\"hist\"`, `\"gpu_hist\"`.  \n",
+    "    - `eval_metric=\"logloss\"`: Default evaluation metric for binary classification. Options include `\"error\"`, `\"auc\"`, and others.  \n",
+    "- Performance Optimization:  \n",
+    "    - `early_stopping_rounds=None`: Stops training if validation metric does not improve after specified rounds.  \n",
+    "    - `n_jobs=1`: Number of threads for parallel computation (`-1` for all processors).  \n",
+    "    - `random_state=None`: Seed for reproducibility.  \n",
+    "    - `verbose=1`: Verbosity level; 0 for silent, higher values for detailed output.  \n",
+    "- Advanced Parameters:  \n",
+    "    - `lambda=1`: L2 regularization term on weights.  \n",
+    "    - `alpha=0`: L1 regularization term on weights.  \n",
+    "    - `max_delta_step=0`: Helps with convergence in imbalanced datasets.\n",
+    "\n",
+    "For more details, refer to the official [XGBoost documentation](https://xgboost.readthedocs.io/en/latest/parameter.html).\n",
+    "\n",
+    "The following hyperparameters are typically the most impactful:\n",
+    "- `n_estimators`\n",
+    "- `max_depth` \n",
+    "- `learning_rate`\n",
+    "- `subsample` \n",
+    "- `colsample_bytree`\n",
+    "- `gamma`\n",
+    "- `min_child_weight`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cf8612fd-291f-4038-a180-35ed168eaca5",
    "metadata": {},
    "source": [
