--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2827,6 +2827,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "466fb3cb-e92a-41ef-aa6d-5ca2bffe0732",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize model\n",
+    "xgb = XGBClassifier(random_state=42)\n",
+    "\n",
+    "# Define hyperparameter grid \n",
+    "xgb_param_grid = {\n",
+    "    \"n_estimators\": [100, 200, 300, 500],               \n",
+    "    \"max_depth\": [3, 6, 10], \n",
+    "    \"learning_rate\": [0.01, 0.1, 0.2],\n",
+    "    \"subsample\": [0.6, 0.8, 1.0],\n",
+    "    \"colsample_bytree\": [0.6, 0.8, 1.0],  \n",
+    "    \"gamma\": [0, 0.1, 0.2],           \n",
+    "    \"min_child_weight\": [1, 3, 5]\n",
+    "}\n",
+    "\n",
+    "# Initialize grid search object\n",
+    "xgb_grid_search = GridSearchCV(\n",
+    "    estimator=xgb,\n",
+    "    param_grid=xgb_param_grid, \n",
+    "    cv=5, \n",
+    "    scoring=\"accuracy\"  # use \"f1\", \"precision\", \"recall\" or \"roc_auc\" optionally\n",
+    ")\n",
+    "\n",
+    "# Fit the grid search to the training data\n",
+    "xgb_grid_search.fit(X_train_transformed, y_train)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "cf8612fd-291f-4038-a180-35ed168eaca5",
    "metadata": {},
