--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2890,6 +2890,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2a50d413-ace8-4005-b273-cae892faad54",
+   "metadata": {},
+   "source": [
+    "## Final Model  \n",
+    "Based on hyperparameter tuning, the following model achieved the best performance (e.g., accuracy = 0.92) on the validation data compared to other candidates, making it the optimal choice for the final model. This model will be further evaluated on the test data to confirm its generalizability.\n",
+    "\n",
+    "Example final model: XGBoost Classifier    \n",
+    "Selected hyperparameters:\n",
+    "- `n_estimators=300`\n",
+    "- `max_depth=4` \n",
+    "- `learning_rate=0.1`\n",
+    "- `subsample=0.8` \n",
+    "- `colsample_bytree=0.8`\n",
+    "- `gamma=0.1`\n",
+    "- `min_child_weight=3`\n",
+    "- `random_state=42`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cf8612fd-291f-4038-a180-35ed168eaca5",
    "metadata": {},
    "source": [
