In machine_learning_template.ipynb, in Modeling (Classification Task) > Final Model section, add subsection for Training Final Model

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2910,6 +2910,37 @@
   },
   {
    "cell_type": "markdown",
+   "id": "66e3ea9b-9d33-4bb8-851c-645471bb427d",
+   "metadata": {},
+   "source": [
+    "### Training Final Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "362036ce-5d52-4ba6-b0ac-bf7cd78742ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize model\n",
+    "final_model = XGBClassifier(\n",
+    "    n_estimators=300, \n",
+    "    max_depth=4, \n",
+    "    learning_rate=0.1,\n",
+    "    subsample=0.8, \n",
+    "    colsample_bytree=0.8, \n",
+    "    gamma=0.1,\n",
+    "    min_child_weight=3, \n",
+    "    random_state=42\n",
+    ")\n",
+    "\n",
+    "# Train model\n",
+    "final_model.fit(X_train_transformed, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cf8612fd-291f-4038-a180-35ed168eaca5",
    "metadata": {},
    "source": [
