In machine_learning_template.ipynb, in Modeling (Classification Task) > Final Model > Training Final Model section, add code to predict on training, validation and test data

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2941,6 +2941,27 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4f4906c4-3902-4059-9613-e273e834f4b5",
+   "metadata": {},
+   "source": [
+    "### Model Evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d8f3ac3-d961-4a3d-89c4-f9186d6cada3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Predict on the training, validation and test data\n",
+    "y_train_pred = final_model.predict(X_train_transformed)\n",
+    "y_val_pred = final_model.predict(X_val_transformed)\n",
+    "y_test_pred = final_model.predict(X_test_transformed)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cf8612fd-291f-4038-a180-35ed168eaca5",
    "metadata": {},
    "source": [
