In machine_learning_template.ipynb, in Modeling (Classification Task) > Final Model > Model Evaluation section, add classification report and confusion matrix for training, validation and test data

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2957,7 +2957,37 @@
     "# Predict on the training, validation and test data\n",
     "y_train_pred = final_model.predict(X_train_transformed)\n",
     "y_val_pred = final_model.predict(X_val_transformed)\n",
-    "y_test_pred = final_model.predict(X_test_transformed)"
+    "y_test_pred = final_model.predict(X_test_transformed)\n",
+    "\n",
+    "# Evaluate model: Classification report\n",
+    "print(\"Training Classification Report:\")\n",
+    "print(classification_report(y_train, y_train_pred))\n",
+    "print(\"Validation Classification Report:\")\n",
+    "print(classification_report(y_val, y_val_pred))\n",
+    "print(\"Test Classification Report:\")\n",
+    "print(classification_report(y_test, y_test_pred))\n",
+    "\n",
+    "# Evaluate model: Confusion matrix\n",
+    "print(\"Training Confusion Matrix:\")\n",
+    "cm_train = confusion_matrix(y_train, y_train_pred)\n",
+    "cm_disp_train = ConfusionMatrixDisplay(confusion_matrix=cm_train, display_labels=final_model.classes_)\n",
+    "cm_disp_train.plot(cmap=\"Blues\")\n",
+    "plt.title(\"Training Confusion Matrix\")\n",
+    "plt.show()\n",
+    "\n",
+    "print(\"Validation Confusion Matrix:\")\n",
+    "cm_val = confusion_matrix(y_val, y_val_pred)\n",
+    "cm_disp_val = ConfusionMatrixDisplay(confusion_matrix=cm_val, display_labels=final_model.classes_)\n",
+    "cm_disp_val.plot(cmap=\"Blues\")\n",
+    "plt.title(\"Validation Confusion Matrix\")\n",
+    "plt.show()\n",
+    "\n",
+    "print(\"Test Confusion Matrix:\")\n",
+    "cm_test = confusion_matrix(y_test, y_test_pred)\n",
+    "cm_disp_test = ConfusionMatrixDisplay(confusion_matrix=cm_test, display_labels=final_model.classes_)\n",
+    "cm_disp_test.plot(cmap=\"Blues\")\n",
+    "plt.title(\"Test Confusion Matrix\")\n",
+    "plt.show()"
    ]
   },
   {
