In machine_learning_template.ipynb, in Modeling (Classification Task) > Final Model, add subsection for Feature Importance with XGBoost feature importance plot

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2992,6 +2992,55 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5e63402e-85d3-445c-be3c-074f350a97fc",
+   "metadata": {},
+   "source": [
+    "### Feature Importance "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65833257-d9e7-4162-99aa-135fadddf6d8",
+   "metadata": {},
+   "source": [
+    "XGBoost Feature Importance Plot:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bfd242e0-bd0a-422e-ac3b-4ccda65901a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Mapping of feature names for better readability\n",
+    "feature_mapping = {\n",
+    "    \"f0\": \"feature_1\",\n",
+    "    \"f1\": \"feature_2\",\n",
+    "    \"f2\": \"feature_3\",\n",
+    "    \"f3\": \"feature_4\",\n",
+    "    \"f4\": \"feature_5\",\n",
+    "    \"f5\": \"feature_6\",\n",
+    "    \"f6\": \"feature_7\",\n",
+    "    \"f7\": \"feature_8\",\n",
+    "    \"f8\": \"feature_9\",\n",
+    "    \"f9\": \"feature_10\"\n",
+    "}\n",
+    "\n",
+    "# Create feature importance plot of the top 10 features\n",
+    "# Note: final_model must be an XGBoost model\n",
+    "xgb.plot_importance(final_model, max_num_features=10)\n",
+    "\n",
+    "# Map the feature names\n",
+    "plt.gca().set_yticklabels([feature_mapping.get(label.get_text(), label.get_text()) \n",
+    "                           for label in plt.gca().get_yticklabels()])\n",
+    "\n",
+    "# Show the plot\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cf8612fd-291f-4038-a180-35ed168eaca5",
    "metadata": {},
    "source": [
