In machine_learning_template.ipynb, in Modeling (Classification Task) > Final Model, add subsection for Saving Model

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -3041,6 +3041,42 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8dcc2ed5-4d97-478f-ac1b-725a6de4fbd1",
+   "metadata": {},
+   "source": [
+    "### Saving Model  \n",
+    "Save both the column transformer and the final model as pickle files in the `models` directory for later use."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee620100-347a-48f9-a1d7-9228f1556572",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create models directory if it doesn't exist\n",
+    "os.makedirs(\"models\", exist_ok=True)\n",
+    "\n",
+    "# Save column transformer \n",
+    "try:\n",
+    "    with open(\"models/column_transformer.pkl\", \"wb\") as file:\n",
+    "        pickle.dump(column_transformer, file)\n",
+    "    print(\"Column transformer saved successfully\")\n",
+    "except Exception as e:\n",
+    "    print(f\"An error occurred while saving the column transformer: {e}}\")\n",
+    "    \n",
+    "# Save final model\n",
+    "try:\n",
+    "    with open(\"models/final_model.pkl\", \"wb\") as file:\n",
+    "        pickle.dump(final_model, file)\n",
+    "    print(\"Final model saved successfully\")\n",
+    "except Exception as e:\n",
+    "    print(f\"An error occurred while saving the final model: {e}}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cf8612fd-291f-4038-a180-35ed168eaca5",
    "metadata": {},
    "source": [
