--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -3116,6 +3116,11 @@
     "\n",
     "**Next Steps**:\n",
     "- Save preprocessed data (e.g., as a `.csv` file).\n",
+    "- Add K-Nearest Neighbors (KNN) as individual baseline model and in model pipeline for both regression and classification task. \n",
+    "- Add Decision Tree as individual baseline model and in model pipeline for both regression and classification task.\n",
+    "- Add Lasso, Ridge, and Polynomial Regression for modeling.\n",
+    "- Add RandomSearchCV for hyperparameter tuning.\n",
+    "- Add unsupervised learning section with algorithms like K-Means Clustering, DBSCAN, and Principal Component Analysis (PCA).\n",
     "- Deploy the model as a web application with an interactive UI and API (e.g., using Gradio or Flask)."
    ]
   }
