In machine_learning_template.ipynb, in Data Preprocessing section, add subsection for Saving Data with code to save as csv file

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -628,6 +628,33 @@
   },
   {
    "cell_type": "markdown",
+   "id": "63d48183-607c-4d2b-a462-7d22b0ee0fc4",
+   "metadata": {},
+   "source": [
+    "## Saving Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "951fa5b4-8784-4081-9de8-dc83de39533d",
+   "metadata": {},
+   "source": [
+    "### csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27d25a24-5dc0-40a4-a022-874a720e9245",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save data from a Pandas DataFrame to a csv file  \n",
+    "df.to_csv(\"preprocessed_data.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9ca10b19-02a9-4a0f-b543-7374f677d139",
    "metadata": {},
    "source": [
