In machine_learning_template.ipynb, in Data Loading and in Data Preprocessing section, rename csv to CSV in markdown subheader

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -103,7 +103,7 @@
    "id": "3de96aef-7438-41fd-bd1d-8cdbdc0ed9cb",
    "metadata": {},
    "source": [
-    "## csv "
+    "## CSV "
    ]
   },
   {
@@ -639,7 +639,7 @@
    "id": "951fa5b4-8784-4081-9de8-dc83de39533d",
    "metadata": {},
    "source": [
-    "### csv"
+    "### CSV"
    ]
   },
   {
