In machine_learning_template.ipynb, in Data Preprocessing > Saving Data > CSV section, save file in data directory and update markdown comments

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -639,7 +639,8 @@
    "id": "951fa5b4-8784-4081-9de8-dc83de39533d",
    "metadata": {},
    "source": [
-    "### CSV"
+    "### CSV  \n",
+    "Save data from a Pandas DataFrame to a `csv` file in the `models` directory"
    ]
   },
   {
@@ -649,8 +650,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save data from a Pandas DataFrame to a csv file  \n",
-    "df.to_csv(\"preprocessed_data.csv\", index=False)"
+    "# Create data directory if it doesn't exist\n",
+    "os.makedirs(\"data\", exist_ok=True)\n",
+    "\n",
+    "# Save as csv  \n",
+    "df.to_csv(\"data/preprocessed_data.csv\", index=False)"
    ]
   },
   {
