In machine_learning_template.ipynb, in Data Preprocessing > Saving Data section, add subsection to save to MySQL

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -659,6 +659,40 @@
   },
   {
    "cell_type": "markdown",
+   "id": "96bad71b-409a-405e-945d-a0b3a30bbebf",
+   "metadata": {},
+   "source": [
+    "### MySQL  \n",
+    "Save preprocessed data from a Pandas DataFrame to a MySQL table.  \n",
+    "Note: Make sure `sql_username` and `sql_password` were imported as environment variables."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3f078ca-246c-4ce0-b00e-515db9e916e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Imports \n",
+    "from sqlalchemy import create_engine\n",
+    "\n",
+    "# Database info\n",
+    "mysql_host = \"localhost\"  # Default hostname for a MySQL server running locally\n",
+    "mysql_port = 3306  # Default port for MySQL\n",
+    "mysql_database_name = \"your_mysql_database_name_here\"\n",
+    "mysql_table_name = \"preprocessed_data\"\n",
+    "\n",
+    "# Create an SQLAlchemy engine for interacting with the MySQL database\n",
+    "engine = create_engine(f\"mysql+mysqlconnector://{sql_username}:{sql_password}@{mysql_host}:{mysql_port}/{mysql_database_name}\")\n",
+    "\n",
+    "# Save data to MySQL \n",
+    "with engine.connect() as connection:\n",
+    "    df.to_sql(name=mysql_table_name, con=connection, if_exists=\"replace\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9ca10b19-02a9-4a0f-b543-7374f677d139",
    "metadata": {},
    "source": [
