In machine_learning_template.ipynb, in Data Preprocessing > Saving Data > MySQL section, implement exception handling

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -683,12 +683,18 @@
     "mysql_database_name = \"your_mysql_database_name_here\"\n",
     "mysql_table_name = \"preprocessed_data\"\n",
     "\n",
-    "# Create an SQLAlchemy engine for interacting with the MySQL database\n",
-    "engine = create_engine(f\"mysql+mysqlconnector://{sql_username}:{sql_password}@{mysql_host}:{mysql_port}/{mysql_database_name}\")\n",
+    "try:\n",
+    "    # Create an SQLAlchemy engine for interacting with the MySQL database\n",
+    "    engine = create_engine(f\"mysql+mysqlconnector://{sql_username}:{sql_password}@{mysql_host}:{mysql_port}/{mysql_database_name}\")\n",
+    "    \n",
+    "    # Save data to MySQL \n",
+    "    with engine.connect() as connection:\n",
+    "        df.to_sql(name=mysql_table_name, con=connection, if_exists=\"replace\", index=False)\n",
+    "    \n",
+    "    print(\"Preprocessed data successfully saved to MySQL.\")\n",
     "\n",
-    "# Save data to MySQL \n",
-    "with engine.connect() as connection:\n",
-    "    df.to_sql(name=mysql_table_name, con=connection, if_exists=\"replace\", index=False)"
+    "except Exception as e:\n",
+    "    print(f\"Error saving preprocessed data to MySQL: {e}\")"
    ]
   },
   {
