In machine_learning_template.ipynb, in Data Preprocessing > Saving Data > CSV section, update markdown comment

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -640,7 +640,7 @@
    "metadata": {},
    "source": [
     "### CSV  \n",
-    "Save data from a Pandas DataFrame to a `csv` file in the `models` directory"
+    "Save preprocessed data from a Pandas DataFrame to a `csv` file in the `data` directory."
    ]
   },
   {
