In machine_learning_template.ipynb, in Summary section, move saving preprocessed data from next steps to data preprocessing section

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -3165,6 +3165,7 @@
     "- Extracted features (e.g., created categorical, numerical, or boolean features from string columns).\n",
     "- Handled missing values (e.g., through deletion, median imputation for numerical columns, mode imputation for categorical columns).\n",
     "- Handled outliers (e.g., removed them using the 3SD method or 1.5 IQR method).\n",
+    "- Saved the preprocessed data (e.g., as a `.csv` file or in a MySQL database table).\n",
     "- Split data into training (e.g., 70%), validation (15%), and test (15%) sets.\n",
     "- Scaled numerical features (e.g., using StandardScaler).\n",
     "- Encoded categorical features (e.g., using One-Hot Encoding).\n",
@@ -3186,7 +3187,6 @@
     "- Saved the final model (e.g., as a pickle file).\n",
     "\n",
     "**Next Steps**:\n",
-    "- Save preprocessed data (e.g., as a `.csv` file).\n",
     "- Add K-Nearest Neighbors (KNN) as individual baseline model and in model pipeline for both regression and classification task. \n",
     "- Add Decision Tree as individual baseline model and in model pipeline for both regression and classification task.\n",
     "- Add Lasso, Ridge, and Polynomial Regression for modeling.\n",
