In machine_learning_template.ipynb, in Summary section, update data preprocessing markdown comments

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -3160,15 +3160,16 @@
    "metadata": {},
    "source": [
     "**Data Preprocessing**:\n",
-    "- Removed duplicates (e.g., based on ID column).\n",
-    "- Handled incorrect data types (e.g., converted string columns to numerical or datetime columns).\n",
+    "- Removed duplicates (e.g., based on the `ID` column).\n",
+    "- Handled incorrect data types (e.g., converted string columns to numerical or `datetime` columns).\n",
     "- Extracted features (e.g., created categorical, numerical, or boolean features from string columns).\n",
-    "- Handled missing values (e.g., through deletion, median imputation for numerical columns, mode imputation for categorical columns).\n",
-    "- Handled outliers (e.g., removed them using the 3SD method or 1.5 IQR method).\n",
+    "- Handled missing values (e.g., through deletion, `median imputation` for numerical columns, `mode imputation` for categorical columns).\n",
+    "- Handled outliers (e.g., removed them using the `3SD` method or `1.5 IQR` method).\n",
     "- Saved the preprocessed data (e.g., as a `.csv` file or in a MySQL database table).\n",
     "- Split data into training (e.g., 70%), validation (15%), and test (15%) sets.\n",
-    "- Scaled numerical features (e.g., using StandardScaler).\n",
-    "- Encoded categorical features (e.g., using One-Hot Encoding).\n",
+    "- Scaled numerical features (e.g., using `standard scaling` or `min-max normalization`).\n",
+    "- Encoded categorical features (e.g., using `one-hot encoding`).\n",
+    "\n",
     "\n",
     "**Exploratory Data Analysis (EDA)**:\n",
     "- Analyzed descriptive statistics (e.g., mean, median, standard deviation) of numerical columns and visualized distributions (e.g., using histograms).\n",
