In machine_learning_template.ipynb, in Summary section, update exploratory data analysis markdown comments

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -3170,12 +3170,11 @@
     "- Scaled numerical features (e.g., using `standard scaling` or `min-max normalization`).\n",
     "- Encoded categorical features (e.g., using `one-hot encoding`).\n",
     "\n",
-    "\n",
     "**Exploratory Data Analysis (EDA)**:\n",
-    "- Analyzed descriptive statistics (e.g., mean, median, standard deviation) of numerical columns and visualized distributions (e.g., using histograms).\n",
-    "- Examined frequencies of categorical columns and visualized them (e.g., using bar plots, a bar plot matrix).\n",
-    "- Assessed bivariate relationships between numerical columns (e.g., using a correlation heatmap, scatterplots, a scatterplot matrix). \n",
-    "- Explored relationships between numerical and categorical columns with group-wise statistics (e.g., mean or median by category) and visualized them (e.g., through bar plots, a bar plot matrix).\n",
+    "- Analyzed descriptive statistics (e.g., `mean`, `median`, `standard deviation`) of numerical columns and visualized distributions (e.g., using `histograms`).\n",
+    "- Examined frequencies of categorical columns and visualized them (e.g., using `bar plots` or a `bar plot matrix`).\n",
+    "- Assessed bivariate relationships between numerical columns (e.g., using a `correlation heatmap`, `scatterplots`, or a `scatterplot matrix`).\n",
+    "- Explored relationships between numerical and categorical columns with group-wise statistics (e.g., `mean` or `median` by category) and visualized them (e.g., through `bar plots` or a `bar plot matrix`).\n",
     "\n",
     "**Modeling**:\n",
     "- Trained baseline models to establish performance benchmarks:\n",
