In machine_learning_template.ipynb, in Summary section, update formatting of markdown comments

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -3160,31 +3160,31 @@
    "metadata": {},
    "source": [
     "**Data Preprocessing**:\n",
-    "- Removed duplicates (e.g., based on the `ID` column).\n",
-    "- Handled incorrect data types (e.g., converted string columns to numerical or `datetime` columns).\n",
+    "- Removed duplicates (e.g., based on the ID column).\n",
+    "- Handled incorrect data types (e.g., converted string columns to numerical or datetime columns).\n",
     "- Extracted features (e.g., created categorical, numerical, or boolean features from string columns).\n",
-    "- Handled missing values (e.g., through deletion, `median imputation` for numerical columns, `mode imputation` for categorical columns).\n",
-    "- Handled outliers (e.g., removed them using the `3SD` method or `1.5 IQR` method).\n",
-    "- Saved the preprocessed data (e.g., as a `.csv` file or in a MySQL database table).\n",
+    "- Handled missing values (e.g., through deletion, median imputation for numerical columns, or mode imputation for categorical columns).\n",
+    "- Handled outliers (e.g., removed them using the 3SD method or 1.5 IQR method).\n",
+    "- Saved the preprocessed data (e.g., as a .csv file or in a MySQL database table).\n",
     "- Split data into training (e.g., 70%), validation (15%), and test (15%) sets.\n",
-    "- Scaled numerical features (e.g., using `standard scaling` or `min-max normalization`).\n",
-    "- Encoded categorical features (e.g., using `one-hot encoding`).\n",
+    "- Scaled numerical features (e.g., using standard scaling or min-max normalization).\n",
+    "- Encoded categorical features (e.g., using one-hot encoding).\n",
     "\n",
     "**Exploratory Data Analysis (EDA)**:\n",
-    "- Analyzed descriptive statistics (e.g., `mean`, `median`, `standard deviation`) of numerical columns and visualized distributions (e.g., using `histograms`).\n",
-    "- Examined frequencies of categorical columns and visualized them (e.g., using `bar plots` or a `bar plot matrix`).\n",
-    "- Assessed bivariate relationships between numerical columns (e.g., using a `correlation heatmap`, `scatterplots`, or a `scatterplot matrix`).\n",
-    "- Explored relationships between numerical and categorical columns with group-wise statistics (e.g., `mean` or `median` by category) and visualized them (e.g., through `bar plots` or a `bar plot matrix`).\n",
+    "- Analyzed descriptive statistics (e.g., mean, median, standard deviation) of numerical columns and visualized distributions (e.g., using histograms).\n",
+    "- Examined frequencies of categorical columns and visualized them (e.g., using bar plots or a bar plot matrix).\n",
+    "- Assessed bivariate relationships between numerical columns (e.g., using a correlation heatmap, scatterplots, or a scatterplot matrix).\n",
+    "- Explored relationships between numerical and categorical columns with group-wise statistics (e.g., mean or median by category) and visualized them (e.g., through bar plots or a bar plot matrix).\n",
     "\n",
     "**Modeling**:\n",
     "- Trained baseline models to establish performance benchmarks:\n",
     "    - For a regression task (e.g., Linear Regression, Support Vector Regressor, Random Forest Regressor, Multi-Layer Perceptron Regressor, XGBoost Regressor).\n",
     "    - For a classification task (e.g., Logistic Regression, Support Vector Classifier, Random Forest Classifier, Multi-Layer Perceptron Classifier, XGBoost Classifier).\n",
-    "- Performed hyperparameter tuning (e.g., using GridSearchCV).\n",
+    "- Performed hyperparameter tuning (e.g., using grid search).\n",
     "- Selected the final model based on performance evaluation:\n",
     "    - For a regression task (e.g., using RMSE, MAPE, or R-squared)\n",
     "    - For a classification task (e.g., using accuracy, precision, recall, or F1 score).\n",
-    "- Saved the final model (e.g., as a pickle file).\n",
+    "- Saved the final model (e.g., as a .pkl file using `pickle`).\n",
     "\n",
     "**Next Steps**:\n",
     "- Add K-Nearest Neighbors (KNN) as individual baseline model and in model pipeline for both regression and classification task. \n",
