--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -3160,15 +3160,15 @@
    "metadata": {},
    "source": [
     "**Data Preprocessing**:\n",
-    "- Removed duplicates (e.g., based on the ID column).\n",
-    "- Handled incorrect data types (e.g., converted string columns to numerical or datetime columns).\n",
-    "- Extracted features (e.g., created categorical, numerical, or boolean features from string columns).\n",
-    "- Handled missing values (e.g., through deletion, median imputation for numerical columns, or mode imputation for categorical columns).\n",
-    "- Handled outliers (e.g., removed them using the 3SD method or 1.5 IQR method).\n",
-    "- Saved the preprocessed data (e.g., as a .csv file or in a MySQL database table).\n",
-    "- Split data into training (e.g., 70%), validation (15%), and test (15%) sets.\n",
-    "- Scaled numerical features (e.g., using standard scaling or min-max normalization).\n",
-    "- Encoded categorical features (e.g., using one-hot encoding).\n",
+    "- Removed duplicates (e.g., based on the ID column using `drop_duplicates` from `pandas`).\n",
+    "- Handled incorrect data types (e.g., converted string columns to numerical or datetime columns using `astype` or `to_datetime` from `pandas`).\n",
+    "- Extracted features (e.g., created categorical, numerical, or boolean features from string columns using custom functions with `apply` from `pandas`, `lambda` functions, and `re` for pattern matching).\n",
+    "- Handled missing values (e.g., through deletion, median imputation for numerical columns, or mode imputation for categorical columns using `dropna` or `fillna` from `pandas`).\n",
+    "- Handled outliers (e.g., removed them using the 3SD method or 1.5 IQR method with a custom transformer class utilizing `BaseEstimator` and `TransformerMixin` from `sklearn`).\n",
+    "- Saved the preprocessed data (e.g., as a .csv file using `to_csv` from `pandas` or in a MySQL database table using `sqlalchemy`, `mysql-connector-python`, and `to_sql` from `pandas`).\n",
+    "- Split data into training (e.g., 70%), validation (15%), and test (15%) sets using `train_test_split` from `sklearn`.\n",
+    "- Scaled numerical features (e.g., using standard scaling with `StandardScaler` or min-max normalization with `MinMaxScaler` from `sklearn`).\n",
+    "- Encoded categorical features (e.g., using one-hot encoding with `OneHotEncoder` from `sklearn`).\n",
     "\n",
     "**Exploratory Data Analysis (EDA)**:\n",
     "- Analyzed descriptive statistics (e.g., mean, median, standard deviation) of numerical columns and visualized distributions (e.g., using histograms).\n",
