In machine_learning_template.ipynb, in Summary section, update markdown formatting for preprocessing and use headers

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -3159,24 +3159,24 @@
    "id": "b27ae0de-8df6-4a3a-8c2e-404e167fe1ab",
    "metadata": {},
    "source": [
-    "**Data Preprocessing**:\n",
-    "- Removed duplicates (e.g., based on the ID column) using `drop_duplicates` from `pandas`.\n",
-    "- Handled incorrect data types (e.g., converted string columns to numerical or datetime columns) using `astype` or `to_datetime` from `pandas`.\n",
-    "- Extracted features (e.g., created categorical, numerical, or boolean features from string columns) using custom functions with `apply` from `pandas`, `lambda` functions, and `re` for pattern matching.\n",
-    "- Handled missing values (e.g., through deletion, median imputation for numerical columns, or mode imputation for categorical columns) using `dropna` or `fillna` from `pandas`.\n",
-    "- Handled outliers (e.g., removed them using the 3SD method or 1.5 IQR method) with a custom transformer class utilizing `BaseEstimator` and `TransformerMixin` from `sklearn`.\n",
-    "- Saved the preprocessed data as a .csv file using `to_csv` from `pandas` or in a MySQL database table using `sqlalchemy`, `mysql-connector-python`, and `to_sql` from `pandas`.\n",
-    "- Split data into training (e.g., 70%), validation (15%), and test (15%) sets using `train_test_split` from `sklearn`.\n",
-    "- Scaled numerical features (e.g., using standard scaling or min-max normalization) with `StandardScaler` or `MinMaxScaler` from `sklearn`.\n",
-    "- Encoded categorical features (e.g., using one-hot encoding) with `OneHotEncoder` from `sklearn`.\n",
+    "## Data Preprocessing\n",
+    "- **Removed duplicates** (e.g., based on the ID column) using `drop_duplicates` from `pandas`.\n",
+    "- **Handled incorrect data types** (e.g., converted string columns to numerical or datetime columns) using `astype` or `to_datetime` from `pandas`.\n",
+    "- **Extracted features** (e.g., created categorical, numerical, or boolean features from string columns) using custom functions with `apply` from `pandas`, `lambda` functions, and `re` for pattern matching.\n",
+    "- **Handled missing values** (e.g., through deletion, median imputation for numerical columns, or mode imputation for categorical columns) using `dropna` or `fillna` from `pandas`.\n",
+    "- **Handled outliers** (e.g., removed them using the 3SD method or 1.5 IQR method) with a custom transformer class utilizing `BaseEstimator` and `TransformerMixin` from `sklearn`.\n",
+    "- **Saved the preprocessed data** as a .csv file using `to_csv` from `pandas` or in a MySQL database table using `sqlalchemy`, `mysql-connector-python`, and `to_sql` from `pandas`.\n",
+    "- **Split data** into training (e.g., 70%), validation (15%), and test (15%) sets using `train_test_split` from `sklearn`.\n",
+    "- **Scaled numerical features** (e.g., using standard scaling or min-max normalization) with `StandardScaler` or `MinMaxScaler` from `sklearn`.\n",
+    "- **Encoded categorical features** (e.g., using one-hot encoding) with `OneHotEncoder` from `sklearn`.\n",
     "\n",
-    "**Exploratory Data Analysis (EDA)**:\n",
+    "## Exploratory Data Analysis (EDA)\n",
     "- Analyzed descriptive statistics (e.g., mean, median, standard deviation) of numerical columns and visualized distributions (e.g., using histograms).\n",
     "- Examined frequencies of categorical columns and visualized them (e.g., using bar plots or a bar plot matrix).\n",
     "- Assessed bivariate relationships between numerical columns (e.g., using a correlation heatmap, scatterplots, or a scatterplot matrix).\n",
     "- Explored relationships between numerical and categorical columns with group-wise statistics (e.g., mean or median by category) and visualized them (e.g., through bar plots or a bar plot matrix).\n",
     "\n",
-    "**Modeling**:\n",
+    "## Modeling\n",
     "- Trained baseline models to establish performance benchmarks:\n",
     "    - For a regression task (e.g., Linear Regression, Support Vector Regressor, Random Forest Regressor, Multi-Layer Perceptron Regressor, XGBoost Regressor).\n",
     "    - For a classification task (e.g., Logistic Regression, Support Vector Classifier, Random Forest Classifier, Multi-Layer Perceptron Classifier, XGBoost Classifier).\n",
@@ -3186,7 +3186,7 @@
     "    - For a classification task (e.g., using accuracy, precision, recall, or F1 score).\n",
     "- Saved the final model (e.g., as a .pkl file using `pickle`).\n",
     "\n",
-    "**Next Steps**:\n",
+    "## Next Steps\n",
     "- Add K-Nearest Neighbors (KNN) as individual baseline model and in model pipeline for both regression and classification task. \n",
     "- Add Decision Tree as individual baseline model and in model pipeline for both regression and classification task.\n",
     "- Add Lasso, Ridge, and Polynomial Regression for modeling.\n",
