In machine_learning_template.ipynb, in Summary section, restructure and format the exploratory data analysis section

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -3171,10 +3171,12 @@
     "- **Encoded categorical features** (e.g., using one-hot encoding) with `OneHotEncoder` from `sklearn`.\n",
     "\n",
     "## Exploratory Data Analysis (EDA)\n",
-    "- Analyzed descriptive statistics (e.g., mean, median, standard deviation) of numerical columns and visualized distributions (e.g., using histograms).\n",
-    "- Examined frequencies of categorical columns and visualized them (e.g., using bar plots or a bar plot matrix).\n",
-    "- Assessed bivariate relationships between numerical columns (e.g., using a correlation heatmap, scatterplots, or a scatterplot matrix).\n",
-    "- Explored relationships between numerical and categorical columns with group-wise statistics (e.g., mean or median by category) and visualized them (e.g., through bar plots or a bar plot matrix).\n",
+    "- **Univariate EDA**:\n",
+    "    - **Numerical columns**: Analyzed descriptive statistics (e.g., mean, median, standard deviation) and visualized distributions using histograms.\n",
+    "    - **Categorical columns**: Examined frequencies and visualized them with bar plots or a bar plot matrix.\n",
+    "- **Bivariate EDA**:\n",
+    "    - **Two numerical columns**: Assessed pairwise relationships using a correlation heatmap, scatterplots, or a scatterplot matrix.\n",
+    "    - **Numerical and categorical columns**: Explored relationships with group-wise statistics (e.g., mean or median by category) and visualized them through bar plots or a bar plot matrix.\n",
     "\n",
     "## Modeling\n",
     "- Trained baseline models to establish performance benchmarks:\n",
