In machine_learning_template.ipynb, in Summary section, update exploratory data analysis section

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -3172,11 +3172,11 @@
     "\n",
     "## Exploratory Data Analysis (EDA)\n",
     "- **Univariate EDA**:\n",
-    "    - **Numerical columns**: Analyzed descriptive statistics (e.g., mean, median, standard deviation) and visualized distributions (e.g., histograms) using `describe` from `pandas`, `histplot` from `seaborn`, and `matplotlib`.\n",
-    "    - **Categorical columns**: Examined frequencies and visualized them with bar plots or a bar plot matrix using `value_counts` from `pandas`, `barplot` from `seaborn`, and `subplot` from `matplotlib`. \n",
+    "    - **Numerical columns**: Analyzed descriptive statistics (e.g., mean, median, standard deviation) using `describe` from `pandas`. Visualized distributions with histograms using `histplot` from `seaborn` and `matplotlib`.\n",
+    "    - **Categorical columns**: Examined frequencies using `value_counts` from `pandas` and visualized them with bar plots or a bar plot matrix using `barplot` from `seaborn` and `subplot` from `matplotlib`. \n",
     "- **Bivariate EDA**:\n",
-    "    - **Two numerical columns**: Assessed pairwise relationships with a correlation heatmap, scatterplots, or a scatterplot matrix using `numpy`, `corr` from `pandas`, `heatmap` and `scatterplot` from `seaborn`, and `subplot` from `matplotlib`.\n",
-    "    - **Numerical and categorical columns**: Explored relationships with group-wise statistics (e.g., mean or median by category) and visualized them through bar plots or a bar plot matrix using `groupby` and `describe` from `pandas`, `barplot` from `seaborn`, and `subplot` from `matplotlib`.\n",
+    "    - **Two numerical columns**: Assessed pairwise relationships with a correlation heatmap, scatterplots, or a scatterplot matrix. Used `corr` from `pandas`, `numpy`, `heatmap` and `scatterplot` from `seaborn`, and `subplot` from `matplotlib`.\n",
+    "    - **Numerical and categorical columns**: Explored relationships with group-wise statistics (e.g., mean or median by category) using `groupby` and `describe` from `pandas`. Visualized results with bar plots or a bar plot matrix using `barplot` from `seaborn` and `subplot` from `matplotlib`.\n",
     "\n",
     "## Modeling\n",
     "- Trained baseline models to establish performance benchmarks:\n",
