In machine_learning_template.ipynb, in Summary section, add tools and methods in modeling section

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -3179,14 +3179,14 @@
     "    - **Numerical and categorical columns**: Explored relationships with group-wise statistics (e.g., mean or median by category) using `groupby` and `describe` from `pandas`. Visualized results with bar plots or a bar plot matrix using `barplot` from `seaborn` and `subplot` from `matplotlib`.\n",
     "\n",
     "## Modeling\n",
-    "- Trained baseline models to establish performance benchmarks:\n",
-    "    - For a regression task (e.g., Linear Regression, Support Vector Regressor, Random Forest Regressor, Multi-Layer Perceptron Regressor, XGBoost Regressor).\n",
-    "    - For a classification task (e.g., Logistic Regression, Support Vector Classifier, Random Forest Classifier, Multi-Layer Perceptron Classifier, XGBoost Classifier).\n",
-    "- Performed hyperparameter tuning (e.g., using grid search).\n",
-    "- Selected the final model based on performance evaluation:\n",
-    "    - For a regression task (e.g., using RMSE, MAPE, or R-squared)\n",
-    "    - For a classification task (e.g., using accuracy, precision, recall, or F1 score).\n",
-    "- Saved the final model (e.g., as a .pkl file using `pickle`).\n",
+    "- **Trained baseline models** to establish performance benchmarks:\n",
+    "    - **Regression task**: E.g., Linear Regression, Support Vector Regressor, Random Forest Regressor, Multi-Layer Perceptron Regressor, or XGBoost Regressor using `sklearn` and `xgboost`.\n",
+    "    - **Classification task**: E.g., Logistic Regression, Support Vector Classifier, Random Forest Classifier, Multi-Layer Perceptron Classifier, or XGBoost Classifier using `sklearn` and `xgboost`.\n",
+    "- **Performed hyperparameter tuning** (e.g., using grid search) with `GridSearchCV` from `sklearn`.\n",
+    "- **Selected the final model** based on performance evaluation:\n",
+    "    - **Regression task**: E.g., using RMSE, MAPE, or R-squared with `mean_squared_error`, `mean_absolute_percentage_error`, and `r2_score` from `sklearn`.\n",
+    "    - **Classification task**: E.g., using accuracy, precision, recall, or F1 score with `classification_report`, `confusion_matrix`, and `ConfusionMatrixDisplay` from `sklearn`.\n",
+    "- **Saved the final model** (e.g., as a .pkl file) using `pickle`.\n",
     "\n",
     "## Next Steps\n",
     "- Add K-Nearest Neighbors (KNN) as individual baseline model and in model pipeline for both regression and classification task. \n",
