--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -3180,12 +3180,12 @@
     "\n",
     "## Modeling\n",
     "- **Trained baseline models** to establish performance benchmarks:\n",
-    "    - **Regression task**: E.g., Linear Regression, Support Vector Regressor, Random Forest Regressor, Multi-Layer Perceptron Regressor, or XGBoost Regressor using `sklearn` and `xgboost`.\n",
-    "    - **Classification task**: E.g., Logistic Regression, Support Vector Classifier, Random Forest Classifier, Multi-Layer Perceptron Classifier, or XGBoost Classifier using `sklearn` and `xgboost`.\n",
+    "    - **Regression task**: E.g., Linear Regression, Support Vector Regressor, Random Forest Regressor, Multi-Layer Perceptron Regressor, XGBoost Regressor (using `sklearn` and `xgboost`).\n",
+    "    - **Classification task**: E.g., Logistic Regression, Support Vector Classifier, Random Forest Classifier, Multi-Layer Perceptron Classifier, XGBoost Classifier (using `sklearn` and `xgboost`).\n",
     "- **Performed hyperparameter tuning** (e.g., using grid search) with `GridSearchCV` from `sklearn`.\n",
     "- **Selected the final model** based on performance evaluation:\n",
-    "    - **Regression task**: E.g., using RMSE, MAPE, or R-squared with `mean_squared_error`, `mean_absolute_percentage_error`, and `r2_score` from `sklearn`.\n",
-    "    - **Classification task**: E.g., using accuracy, precision, recall, or F1 score with `classification_report`, `confusion_matrix`, and `ConfusionMatrixDisplay` from `sklearn`.\n",
+    "    - **Regression task**: E.g., using RMSE, MAPE, or R-squared (with `mean_squared_error`, `mean_absolute_percentage_error`, and `r2_score` from `sklearn`).\n",
+    "    - **Classification task**: E.g., using accuracy, precision, recall, or F1 score (with `classification_report`, `confusion_matrix`, and `ConfusionMatrixDisplay` from `sklearn`).\n",
     "- **Saved the final model** (e.g., as a .pkl file) using `pickle`.\n",
     "\n",
     "## Next Steps\n",
