--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -44,7 +44,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from sklearn.base import BaseEstimator, TransformerMixin\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.preprocessing import StandardScaler, MinMaxScaler, OneHotEncoder\n",
