In machine_learning_template.ipynb, in Summary section, add data loading to data preprocessing section

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -3160,6 +3160,7 @@
    "metadata": {},
    "source": [
     "## Data Preprocessing\n",
+    "- **Loaded data** from a .csv file using `read_csv` from `pandas` or from a MySQL database table using `sqlalchemy`, `mysql-connector-python`, and `read_sql` from `pandas`.\n",
     "- **Removed duplicates** (e.g., based on the ID column) using `drop_duplicates` from `pandas`.\n",
     "- **Handled incorrect data types** (e.g., converted string columns to numerical or datetime columns) using `astype` or `to_datetime` from `pandas`.\n",
     "- **Extracted features** (e.g., created categorical, numerical, or boolean features from string columns) using custom functions with `apply` from `pandas`, `lambda` functions, and `re` for pattern matching.\n",
