In machine_learning_template.ipynb, in Summary section, add column transformer in preprocessing section

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -3170,6 +3170,7 @@
     "- **Split data** into training (e.g., 70%), validation (15%), and test (15%) sets using `train_test_split` from `sklearn`.\n",
     "- **Scaled numerical features** (e.g., using standard scaling or min-max normalization) with `StandardScaler` or `MinMaxScaler` from `sklearn`.\n",
     "- **Encoded categorical features** (e.g., using one-hot encoding) with `OneHotEncoder` from `sklearn`.\n",
+    "- **Applied scaling and encoding together** using `ColumnTransformer` from `sklearn`.\n",
     "\n",
     "## Exploratory Data Analysis (EDA)\n",
     "- **Univariate EDA**:\n",
